testing/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: rss-site
 labels:
  app: web
spec:
 replicas: 2
 selector:
  matchLabels:
   app: web
 template:
  metadata:
   labels:
    app: web
  spec:
   containers:
     - name: front-end
       image: nginx
       ports:
        - containerPort: 80        
     - name: rss-reader
       image: nickchase/rss-php-nginx:v1
       ports:
        - containerPort: 88
