testing/env-pod.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    CapacityProvisioned: 0.25vCPU 0.5GB
    Logging: 'LoggingDisabled: LOGGING_CONFIGMAP_NOT_FOUND'
    kubernetes.io/psp: eks.privileged
  creationTimestamp: "2021-03-27T15:16:22Z"
  labels:
    eks.amazonaws.com/fargate-profile: fp-default
    run: env-pod
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:run: {}
      f:spec:
        f:containers:
          k:{"name":"env-pod"}:
            .: {}
            f:env:
              .: {}
              k:{"name":"name"}:
                .: {}
                f:name: {}
                f:value: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-03-27T15:16:22Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:CapacityProvisioned: {}
          f:Logging: {}
    manager: eks-fargate-scheduler
    operation: Update
    time: "2021-03-27T15:16:24Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"192.168.119.121"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-03-27T15:17:57Z"
  name: env-pod
  namespace: default
  resourceVersion: "1104200"
  selfLink: /api/v1/namespaces/default/pods/env-pod
  uid: 7986cee1-9cb0-4b1c-b1c2-3d53284f3f81
spec:
  containers:
  - env:
    - name: name
      value: orange
    image: busybox
    imagePullPolicy: Always
    name: env-pod
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-fqhzt
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: fargate-ip-192-168-119-121.ec2.internal
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Never
  schedulerName: fargate-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-fqhzt
    secret:
      defaultMode: 420
      secretName: default-token-fqhzt
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:17:55Z"
    reason: PodCompleted
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:17:55Z"
    reason: PodCompleted
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:17:55Z"
    reason: PodCompleted
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:17:55Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://681b2401a09e9b535f488d12e3159a0f6662f73f2e4842075e3a9e1873067e18
    image: docker.io/library/busybox:latest
    imageID: docker.io/library/busybox@sha256:ce2360d5189a033012fbad1635e037be86f23b65cfd676b436d0931af390a2ac
    lastState: {}
    name: env-pod
    ready: false
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: containerd://681b2401a09e9b535f488d12e3159a0f6662f73f2e4842075e3a9e1873067e18
        exitCode: 0
        finishedAt: "2021-03-27T15:17:56Z"
        reason: Completed
        startedAt: "2021-03-27T15:17:56Z"
  hostIP: 192.168.119.121
  phase: Succeeded
  podIP: 192.168.119.121
  podIPs:
  - ip: 192.168.119.121
  qosClass: BestEffort
  startTime: "2021-03-27T15:17:55Z"
