testing/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: http-frontend
  name: http-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-frontend
    spec:
      containers:
      - image: httpd:2.4-alpine
        name: httpd
        resources: {}
status: {}
