testing/messaging2.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    CapacityProvisioned: 0.25vCPU 0.5GB
    Logging: 'LoggingDisabled: LOGGING_CONFIGMAP_NOT_FOUND'
    kubernetes.io/psp: eks.privileged
  creationTimestamp: "2021-03-26T01:53:05Z"
  labels:
    eks.amazonaws.com/fargate-profile: fp-default
    tier: msg2
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:tier: {}
      f:spec:
        f:containers:
          k:{"name":"messaging"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-03-26T01:53:05Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:CapacityProvisioned: {}
          f:Logging: {}
    manager: eks-fargate-scheduler
    operation: Update
    time: "2021-03-26T01:53:07Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"192.168.102.56"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-03-26T01:54:41Z"
  name: messaging
  namespace: default
  resourceVersion: "591984"
  selfLink: /api/v1/namespaces/default/pods/messaging
  uid: 17f0452f-64c4-4589-a242-069cbd885d7b
spec:
  containers:
  - image: redis:alpine
    imagePullPolicy: IfNotPresent
    name: messaging
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-fqhzt
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: fargate-ip-192-168-102-56.ec2.internal
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Always
  schedulerName: fargate-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-fqhzt
    secret:
      defaultMode: 420
      secretName: default-token-fqhzt
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-03-26T01:54:38Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-03-26T01:54:41Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-03-26T01:54:41Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-03-26T01:54:38Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://71939f9f01d60791bb2acc9bb2bc2520fb59c1bc06c2e1aefb832986e2a705aa
    image: docker.io/library/redis:alpine
    imageID: docker.io/library/redis@sha256:46857d41d722c11b06f66a4006eb77e6c7180a98d35c48562c5a347e9eb4ec54
    lastState: {}
    name: messaging
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2021-03-26T01:54:41Z"
  hostIP: 192.168.102.56
  phase: Running
  podIP: 192.168.102.56
  podIPs:
  - ip: 192.168.102.56
  qosClass: BestEffort
  startTime: "2021-03-26T01:54:38Z"
