testing/multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: multi-container-pod
spec:
    containers:
    - name: nginx
      image: nginx:1.15.8
      ports: 
      - containerPort: 8080
    - name: nginx2
      image: nginx:1.15.8
      ports:
      - containerPort: 80
    - name: busybox-sidecar
      image: busybox
      command: ['sh', '-c', 'while true; do sleep 30; done;']
