testing/my-args-pod.yml
apiVersion: v1
kind: Pod
metadata:
        name: my-args-pod
        labels:
                app: myapp
spec:
        containers:
                - name: myapp-container
                  image: busybox
                  command: ['echo']
                  args: ['This is my custom argument']
        restartPolicy: Never
