testing/my-command-pod.yml
apiVersion: v1
kind: Pod
metadata:
        name: my-command-pod
        labels:
                app: myapp
spec:
        containers:
                - name: myapp-container
                  image: busybox
                  command: ['echo']
        restartPolicy: Never
