testing/my-containerport-pod.yml
apiVersion: v1
kind: Pod
metadata:
        name: my-containerport-pod
        labels:
                app: myapp
spec:
        containers:
                - name: myapp-container
                  image: nginx
                  ports:
                          - containerPort: 80
