testing/my-pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod2
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes!! && sleep 3600']
