testing/nginx-template-declarative.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-448840
spec:
  containers:
    - name: nginx-448840
      image: nginx:alpine
      ports: 
        - containerPort: 80
