testing/nginx-template.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-448839
  name: nginx-448839
spec:
  containers:
  - image: nginx:alpine
    name: nginx-448839
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
