testing/nginx.yml
apiVersion: v1
kind: Pod
metadata:
        name: nginx
        labels:
                app: nginx
spec:
        containers:
                - name: nginx
                  image: nginx
                  command: ["nginx"]
                  args: ["-g", "daemon off;", "-q"]
                  ports:
                          - containerPort: 80
