testing/nginx123.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    CapacityProvisioned: 0.25vCPU 0.5GB
    Logging: 'LoggingDisabled: LOGGING_CONFIGMAP_NOT_FOUND'
    kubernetes.io/psp: eks.privileged
  creationTimestamp: "2021-06-09T01:57:12Z"
  labels:
    eks.amazonaws.com/fargate-profile: fp-default
    environment: dev
    run: nginx
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:run: {}
      f:spec:
        f:containers:
          k:{"name":"nginx"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-06-09T01:57:11Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:CapacityProvisioned: {}
          f:Logging: {}
    manager: eks-fargate-scheduler
    operation: Update
    time: "2021-06-09T01:57:13Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"192.168.154.198"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-06-09T01:59:29Z"
  name: nginx123
  namespace: testing
  resourceVersion: "1912784"
  selfLink: /api/v1/namespaces/default/pods/nginx
  uid: df680cd8-95a6-44d4-b30a-cfd0fc301539
spec:
  containers:
  - image: nginx:alpine
    imagePullPolicy: IfNotPresent
    name: nginx
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-spjcw
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: fargate-ip-192-168-154-198.ec2.internal
  preemptionPolicy: PreemptLowerPriority
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Never
  schedulerName: fargate-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-spjcw
    secret:
      defaultMode: 420
      secretName: default-token-spjcw
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-06-09T01:59:26Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-06-09T01:59:29Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-06-09T01:59:29Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-06-09T01:59:26Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://a10b23737dd405d8e06be011171dcb6cb2065bf6eb47a50d34350c9a33bd86ca
    image: docker.io/library/nginx:alpine
    imageID: docker.io/library/nginx@sha256:0f8595aa040ec107821e0409a1dd3f7a5e989501d5c8d5b5ca1f955f33ac81a0
    lastState: {}
    name: nginx
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2021-06-09T01:59:29Z"
  hostIP: 192.168.154.198
  phase: Running
  podIP: 192.168.154.198
  podIPs:
  - ip: 192.168.154.198
  qosClass: BestEffort
  startTime: "2021-06-09T01:59:26Z"
