testing/pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    CapacityProvisioned: 0.25vCPU 0.5GB
    Logging: 'LoggingDisabled: LOGGING_CONFIGMAP_NOT_FOUND'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app":"myapp"},"name":"my-pod2","namespace":"default"},"spec":{"containers":[{"command":["sh","-c","echo Hello Kubernetes!! \u0026\u0026 sleep 3600"],"image":"busybox","name":"myapp-container"}]}}
    kubernetes.io/psp: eks.privileged
  creationTimestamp: "2021-03-27T14:59:27Z"
  labels:
    app: myapp
    eks.amazonaws.com/fargate-profile: fp-default
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:containers:
          k:{"name":"myapp-container"}:
            .: {}
            f:command: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-03-27T14:59:27Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:CapacityProvisioned: {}
          f:Logging: {}
    manager: eks-fargate-scheduler
    operation: Update
    time: "2021-03-27T14:59:29Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"192.168.112.69"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-03-27T15:01:08Z"
  name: my-pod2
  namespace: default
  resourceVersion: "1100135"
  selfLink: /api/v1/namespaces/default/pods/my-pod2
  uid: 17b39bee-4b50-4112-9df0-e3c4f670258d
spec:
  containers:
  - command:
    - sh
    - -c
    - echo Hello Kubernetes!! && sleep 3600
    image: busybox
    imagePullPolicy: Always
    name: myapp-container
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-fqhzt
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: fargate-ip-192-168-112-69.ec2.internal
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Always
  schedulerName: fargate-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-fqhzt
    secret:
      defaultMode: 420
      secretName: default-token-fqhzt
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:01:05Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:01:08Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:01:08Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-03-27T15:01:05Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://874fae31fb9f7e6c3cd71768224e2c268259fa55900c08af6165c9ed7f490fc8
    image: docker.io/library/busybox:latest
    imageID: docker.io/library/busybox@sha256:ce2360d5189a033012fbad1635e037be86f23b65cfd676b436d0931af390a2ac
    lastState: {}
    name: myapp-container
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2021-03-27T15:01:07Z"
  hostIP: 192.168.112.69
  phase: Running
  podIP: 192.168.112.69
  podIPs:
  - ip: 192.168.112.69
  qosClass: BestEffort
  startTime: "2021-03-27T15:01:05Z"
