testing/pod-multi.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sega
  name: sega
spec:
  containers:
  - image: busybox
    name: tails
    command: ["sleep", "3600"]
  - image: nginx
    name: sonic
