testing/testdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task-deployment
  name: task-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task-deployment
    spec:
      containers:
      - image: busybox
        name: busybox
        resources: {}
status: {}
